<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@android:color/black">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/aboutCloseImageView"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:foreground="?attr/selectableItemBackground"
        android:padding="10dp"
        app:srcCompat="@drawable/ic_close" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/matteoWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_marginStart="48dp"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/matteo" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="24dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/matteoTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:text="@string/matteo_lobello"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    app:fontFamily="@font/roboto_medium" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/matteoTextView"
                    android:layout_marginTop="6dp"
                    android:text="@string/developer"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    app:fontFamily="@font/roboto_medium" />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/gianlucaWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="50dp"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/gianlucaImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/gianluca" />

            <RelativeLayout
                android:id="@+id/gianlucaTextWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="24dp"
                android:layout_toStartOf="@id/gianlucaImageView">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/gianlucaTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:gravity="end"
                    android:text="@string/gianluca_astorino"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    app:fontFamily="@font/roboto_medium" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/gianlucaTextView"
                    android:layout_marginTop="6dp"
                    android:gravity="end"
                    android:text="@string/designer"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    app:fontFamily="@font/roboto_medium" />

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>