<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@android:color/black">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/aspectRatioCloseImageView"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:foreground="?attr/selectableItemBackground"
        android:padding="10dp"
        app:srcCompat="@drawable/ic_close" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/oneToOneWrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:padding="30dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/oneToOneImageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/square" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/oneToOneImageView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/one_to_one"
                    android:textColor="@android:color/white"
                    app:fontFamily="@font/roboto_medium" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/sixteenToNineWrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:padding="30dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/sixteenToNineImageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/landscape" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sixteenToNineImageView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/sixteen_to_nine"
                    android:textColor="@android:color/white"
                    app:fontFamily="@font/roboto_medium" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/nineToSixteenWrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:padding="30dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/nineToSixteenImageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/portrait" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nineToSixteenImageView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/nine_to_sixteen"
                    android:textColor="@android:color/white"
                    app:fontFamily="@font/roboto_medium" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>